--- a/roles/common/meta/main.yml
+++ b/roles/common/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  author: Mario Gamboa
-  description: Common Role
-  company: None
+  author: your name
+  description: your role description
+  company: your company (optional)
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
