Compatibility lastest ansible

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,8 @@
 [defaults]
+inventory = ./inventories/production
 roles_path = ./roles
+collections_paths = ./collections
 library = ./library
 module_utils = ./module_utils
 filter_plugins = ./filter_plugins
+interpreter_python = auto_silent
